--- a/src/com/jstore/views/CitasView.form
+++ b/src/com/jstore/views/CitasView.form
@@ -65,8 +65,8 @@
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jPanel2" max="32767" attributes="0"/>
-                  <Component id="datosPanel" alignment="0" max="32767" attributes="1"/>
+                  <Component id="datosPanel" max="32767" attributes="1"/>
+                  <Component id="jPanel2" alignment="0" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -232,17 +232,15 @@
                       <Component id="jLabel5" alignment="0" min="-2" max="-2" attributes="1"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="103" alignment="0" groupAlignment="0" max="-2" attributes="0">
-                          <Group type="102" attributes="0">
-                              <Component id="txtId" min="-2" pref="77" max="-2" attributes="1"/>
-                              <EmptySpace min="-2" pref="4" max="-2" attributes="0"/>
-                              <Component id="newLabel" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <Component id="txtDescripcion" alignment="0" max="32767" attributes="1"/>
-                          <Component id="txtNombre" alignment="0" pref="233" max="32767" attributes="1"/>
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Group type="102" attributes="0">
+                          <Component id="txtId" min="-2" pref="77" max="-2" attributes="1"/>
+                          <EmptySpace min="-2" pref="4" max="-2" attributes="0"/>
+                          <Component id="newLabel" min="-2" max="-2" attributes="0"/>
                       </Group>
+                      <Component id="txtDescripcion" alignment="0" max="32767" attributes="1"/>
                       <Component id="txtCosto" alignment="0" min="-2" pref="92" max="-2" attributes="1"/>
+                      <Component id="txtNombre" alignment="0" pref="212" max="32767" attributes="1"/>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
@@ -290,11 +288,6 @@
             <Property name="name" type="java.lang.String" value="txtId" noResource="true"/>
           </Properties>
         </Component>
-        <Component class="org.jdesktop.swingx.JXTextField" name="txtNombre">
-          <Properties>
-            <Property name="name" type="java.lang.String" value="txtNombre" noResource="true"/>
-          </Properties>
-        </Component>
         <Component class="javax.swing.JFormattedTextField" name="txtCosto">
           <Properties>
             <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
@@ -337,6 +330,15 @@
             <Property name="opaque" type="boolean" value="true"/>
           </Properties>
         </Component>
+        <Component class="javax.swing.JTextField" name="txtNombre">
+          <Properties>
+            <Property name="text" type="java.lang.String" resourceKey="txtNombre.text"/>
+            <Property name="name" type="java.lang.String" value="txtNombre" noResource="true"/>
+          </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new EntityJTextField()"/>
+          </AuxValues>
+        </Component>
       </SubComponents>
     </Container>
     <Component class="org.jdesktop.swingx.JXButton" name="saveButton">
@@ -372,7 +374,7 @@
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="removeSesionButton" min="-2" pref="26" max="-2" attributes="0"/>
                       </Group>
-                      <Component id="jScrollPane2" alignment="1" pref="357" max="32767" attributes="0"/>
+                      <Component id="jScrollPane2" alignment="1" pref="451" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
